style: add scrollbar-gutter to prevent layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,11 @@ html {
   width: 100%;
 }
 
+html, body { 
+  min-block-size: 100%;
+  scrollbar-gutter: stable;
+}
+
 .button--primary,
 .button.colOne,
 .buttonHover--primary:hover {
